vlib/v/checker/tests/left_shift_err.vv
fn main() {
	mut l := []int{}
	l << 'test'
}
